Adding video and link to project and put personnal first

--- a/index.html
+++ b/index.html
@@ -59,6 +59,39 @@
 
     <!-- Projects Section -->
     <section id="projects" class="section projects">
+        <h2>Personnal projects</h2>
+        <div class="project-list">
+            <div class="project">
+                <h3>3 2 1 Dimension!</h3>
+                <p>A little 3D game that play with the perspective of the camera.</p>
+                <video controls autoplay loop muted>
+                    <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="project">
+                <h3>Web Unity no vision Project</h3>
+                <p>A Unity project working online when you can't see anything. To start seeing the nevironment you need to click and points will appear to help you visualize your environment.</p>
+                <video controls autoplay loop muted>
+                    <source src="dl-files/Unity Web Player _ WebGameNoView - Google Chrome 2025-07-14 10-12-50.mp4.mp4" type="video/mp4">
+                </video>
+                <a href="https://polobrn.github.io/Unity-Web_NoView/">Play the Game</a>
+            </div>
+            <div class="project">
+                <h3>Godot little Game</h3>
+                <p>A way to show my ability to quickly take control of several 3D/2D engines. Godot is an open source 3D/2D engine, hence my choice for it.</p>
+            </div>
+            <div class="project">
+                <h3>Reinforcement Learning</h3>
+                <p>To improve my skills and develop new ones, I completed a small Python-based AI project. The AI simply had to play the 'Tetris' game and try to get the highest score possible without knowing the positions of the elements in advance.</p>
+                <a href="https://github.com/PoloBrn/IA-Reinforcement-Tetris">View on GitHub</a>
+                <video controls autoplay loop muted>
+                    <source src="dl-files/IA-Reinforcement-Tetris.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </section>
+    
+    <section id="projects" class="section projects">
         <h2>Student projects</h2>
         <div class="project-list">
         <div class="project">
@@ -104,35 +137,6 @@
             </div>
         </div>
     </section>
-    </section>
-    <section id="projects" class="section projects">
-        <h2>Personnal projects</h2>
-        <div class="project-list">
-            <div class="project">
-                <h3>3 2 1 Dimension!</h3>
-                <p>A little 3D game that play with the perspective of the camera.</p>
-                <video controls autoplay loop muted>
-                    <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="project">
-                <h3>Escape Game VR (Collaboration with Louis Chochoy)</h3>
-                <p>An escape game in virtual reality to use virtual reality interactions and avatar management in virtual reality.</p>
-                
-            </div>
-            <div class="project">
-                <h3>Godot little Game</h3>
-                <p>A way to show my ability to quickly take control of several 3D/2D engines. Godot is an open source 3D/2D engine, hence my choice for it.</p>
-            </div>
-            <div class="project">
-                <h3>Reinforcement Learning</h3>
-                <p>To improve my skills and develop new ones, I completed a small Python-based AI project. The AI simply had to play the 'Tetris' game and try to get the highest score possible without knowing the positions of the elements in advance.</p>
-                <a href="https://github.com/PoloBrn/IA-Reinforcement-Tetris">View on GitHub</a>
-                <video controls autoplay loop muted>
-                    <source src="dl-files/IA-Reinforcement-Tetris.mp4" type="video/mp4">
-                </video>
-            </div>
-        </div>
     </section>
 
     <!-- Footer -->
