--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="project">
                 <h3>Web Unity no vision Project</h3>
-                <p>A Unity project working online when you can't see anything. To start seeing the nevironment you need to click and points will appear to help you visualize your environment.</p>
+                <p>This is a Unity project that works online even when you can't see anything. To start seeing your environment, click to make points appear and help you visualise it.</p>
                 <video controls autoplay loop muted>
                     <source src="dl-files/Unity Web Player _ WebGameNoView - Google Chrome 2025-07-14 10-12-50.mp4.mp4" type="video/mp4">
                 </video>
