--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
             </div>
             <div class="project">
                 <h3>Godot little Game</h3>
-                <p>A way to show my ability to quickly take control of several 3D/2D engines. Godot is an open source 3D/2D engine, hence my choice for it.</p>
+                <p>A way to show my ability to quickly take control of several 3D/2D engines. Godot is an open source 3D/2D engine, hence my choice for it. It is a tiny GTA inspired game.</p>
+                <video controls autoplay loop muted>
+                    <source src="dl-files/Godot-Game 2025-07-18 18-05-54.mp4" type="video/mp4">
+                </video>
             </div>
             <div class="project">
                 <h3>Reinforcement Learning</h3>
