Adding link to play the GTA like

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <div class="project">
                 <h3>Godot little Game</h3>
                 <p>A way to show my ability to quickly take control of several 3D/2D engines. Godot is an open source 3D/2D engine, hence my choice for it. It is a tiny GTA inspired game.</p>
+                <a href="https://github.com/PoloBrn/GTA-Like-Godot2D">Play the Game</a>
                 <video controls autoplay loop muted>
                     <source src="dl-files/Godot-Game 2025-07-18 18-05-54.mp4" type="video/mp4">
                 </video>
