Update with newest version

--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
         <div class="project-list">
             <div class="project">
                 <h3>3 2 1 Dimension!</h3>
-                <p>A little 3D game that play with the perspective of the camera.</p>
+                <p>At first, it was just a short game that played with dimensions and perspectives. Now it has become more important, since I have added more mini games, such as the possibility to travel through a town in 3D or even play a little racing game.</p>
+                <a href="https://github.com/PoloBrn/3-2-1-Dimensions-Games-Build/tree/main/NEW">Play the Game</a>
+                <video id="myVideo" controls autoplay loop muted>
+                    <source src="dl-files/3 2 1 Dimensions ! 2025-08-15 16-19-49.mp4" type="video/mp4">
+                </video>
+                <p>And here is the old version of it.</p>
+                <a href="https://github.com/PoloBrn/3-2-1-Dimensions-Games-Build/tree/main/OLD">Play the Game</a>
                 <video controls autoplay loop muted>
                     <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
                 </video>
